# rust-ble-dfu

./: Cargo.toml  LICENCE  README.md  flake.nix
.cargo/: config.toml
src/: conn.rs  elf.rs  init_packet.rs  main.rs  messages.rs
