[package]
name = "ble-dfu"
version = "0.1.0"
edition = "2021"

[dependencies]
bluest = { git = "https://github.com/alexmoon/bluest", version = "0.6.7" }
byteorder = "1.5.0"
clap = { version = "4.5.20", features = ["derive"] }
color-eyre = "0.6.3"
crc32fast = "1.4.2"
ctrlc = "3.4.5"
eyre = "0.6.12"
futures-lite = "2.3.0"
humantime = "2.1.0"
kdam = { version = "0.5.2", features = ["derive", "rich", "spinner", "template"] }
leb128 = "0.2.5"
object = "0.36.5"
ondrop = "0.1.0"
sha2 = "0.10.8"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["full"] }
tracing = { version = "0.1.40", features = ["async-await"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
